--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 ---
 applications:
-- name: discovery-server
+- name: discovery
   instances: 1
   memory: 500m
   path: target/discovery-server-1.0.0-SNAPSHOT.jar
+  
