--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,8 @@
 ---
 applications:
 - name: discovery
+  routes:
+   - route: discovery.cfapps.io
   instances: 1
   memory: 500m
   path: target/discovery-server-1.0.0-SNAPSHOT.jar
